Use weak-modules directly in lustre-client-lib.sh